Added filtering by npc text on dropviewer for more clearence